<resources>
    <string name="app_name">Calculator</string>
    <string name="text_value"></string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="addition">+</string>
    <string name="subtraction">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="equally">=</string>
    <string name="dot">.</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tg">tg</string>
    <string name="ctg">ctg</string>
    <string name="sqrt">sqrt</string>
    <string name="pow">^</string>
    <string name="del">del</string>
    <string name="clear">Clear</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
