<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    tools:context=".AdditionalKeysFragment">

    <Button
        android:id="@+id/sin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sin"
        android:layout_column="0"
        android:layout_row="0"
        android:textSize="34sp" />
    <Button
        android:id="@+id/cos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cos"
        android:layout_column="0"
        android:layout_row="1"
        android:textSize="34sp" />
    <Button
        android:id="@+id/tg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tg"
        android:layout_column="0"
        android:layout_row="2"
        android:textSize="34sp" />
    <Button
        android:id="@+id/ctg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ctg"
        android:layout_column="0"
        android:layout_row="3"
        android:textSize="34sp" />
    <Button
        android:id="@+id/del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/del"
        android:layout_column="1"
        android:layout_row="0"
        android:textSize="34sp" />
    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:layout_column="1"
        android:layout_row="1"
        android:textSize="34sp" />
    <Button
        android:id="@+id/sqrt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sqrt"
        android:layout_column="1"
        android:layout_row="2"
        android:textSize="34sp" />
    <Button
        android:id="@+id/pow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pow"
        android:layout_column="1"
        android:layout_row="3"
        android:textSize="34sp" />


</GridLayout>